@@ -3,6 +3,11 @@
 bubbles \- animated bubble display
 .SH SYNOPSIS
 .B bubbles
+[-d \fIDELAY\fP]
+.SH OPTIONS
+.TP
+.BI \-d \ DELAY
+update interval in millisecond. (Default: 500)
 .SH DESCRIPTION
 .IX  "bubbles command"  ""  "\fLbubbles\fP \(em display bubbles"
 .LP
